--- a/Farma/Index.html
+++ b/Farma/Index.html
@@ -17,11 +17,11 @@
           <!-- Icon -->
           <div class="fadeIn first">
             
-            <h1>Help-Desk</h1>
+            <h3 style="color: rgba(247, 211, 10, 0.548);"><strong>SGS Unidossis</strong></h3>
           </div>
       
           <!-- Login Form -->
-          <form id="frmLogin" method="POST" onsubmit="return loginUsuario()">
+          <form id="frmLogin" method=" " onsubmit="return loginUsuario()">
             <input type="text" id="login" class="fadeIn second" name="login" placeholder="username" required>
             <input type="password" id="password" class="fadeIn third" name="password" placeholder="password" required> 
             <input type="submit" class="fadeIn fourth" value="Entrar">
@@ -48,7 +48,7 @@
         </button>
       </div>
       <div class="modal-body">
-        Contactar con 000000
+        Contactar con : 3232203664
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
