--- a/Farma/Index.html
+++ b/Farma/Index.html
@@ -17,7 +17,7 @@
           <!-- Icon -->
           <div class="fadeIn first">
             
-            <h3 style="color: rgba(247, 211, 10, 0.548);"><strong>SGS Unidossis</strong></h3>
+            <h3 style="color: rgba(247, 211, 10, 0.548);"><strong>Help-Desk</strong></h3>
           </div>
       
           <!-- Login Form -->
